--- a/MapVisualization/package.json
+++ b/MapVisualization/package.json
@@ -16,6 +16,7 @@
     "jquery": "^3.7.0",
     "leaflet": "^1.9.3",
     "leaflet.markercluster": "^1.5.3",
+    "leaflet.markercluster.placementstrategies": "^0.2.1",
     "prunecluster": "^2.1.0"
   }
 }
